# doctor-adk

./: .env.example  .gitignore  AGENTS.md  Dockerfile  package-lock.json  package.json
agent/: main.py  pyproject.toml  trip_state.py  utils.py
agent/agents/: __init__.py  discovery.py  itinerary.py  lodging.py  profile.py  transport.py  viability.py
agent/tests/: test_trip_state.py
docs/reference/: trvl-mcp-tools-raw.json
docs/superpowers/plans/: 2026-04-25-litellm-mistral-vercel.md  2026-04-25-shared-state-results-canvas.md  2026-04-27-trip-first-adk-mcp.md  2026-05-03-agent-prompts.md
docs/superpowers/specs/: 2026-04-25-litellm-openrouter-vercel-design.md  2026-04-25-shared-state-results-canvas-design.md  2026-04-27-plan-trip-canvas-ui-design.md  2026-04-27-trip-first-adk-mcp-design.md  2026-05-03-agent-prompts-design.md
scripts/: generate-trvl-tool-schemas.mjs  run-agent.sh  setup-agent.sh
src/app/: globals.css  layout.tsx  page.tsx
src/app/globe/: page.tsx
src/components/: CopilotProvider.tsx  McpToolCall.tsx  ToolRenderer.tsx  date-results.tsx  flight-card.tsx  flight-results.tsx  globe-canvas.tsx  mcp-tool-call.tsx  providers.tsx  results-canvas.tsx  tool-renderer.tsx  tool-result-components.tsx  travel-state-panel.tsx  trip-globe-view.tsx
src/components/mcp-tool-call/: format.ts  generated-tool-renderers.tsx  generated-tool-schemas.ts  payload.ts  summaries.ts  tool-meta.ts  types.ts
src/components/tool-calls/: assess-trip.tsx  check-visa.tsx  hotel-prices.tsx  (+19 more)
src/lib/: airports.ts  arcs.ts  cities.ts  state.ts  trvl-tools.ts  types.ts
(+61 files in other folders)
