[project]
name = "flight-agent"
version = "0.1.0"
description = "Flight search agent powered by fli MCP + Google ADK"
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "python-dotenv",
  "pydantic",
  "google-adk",
  "google-genai",
  "ag-ui-adk",
  "litellm",
  "flights[mcp] @ git+https://github.com/punitarani/fli.git",
  "a2a-sdk==0.3.26",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[project.scripts]
app = "main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
